# AgentAlchemy

./: README.md  check_user.py  console_ui.py  create_admin_user.py  debug_auth.py  fix_user_issue.py  pyproject.toml  simple_debug.py  test_auth.py  test_signup.py
.github/workflows/: deploy.yml
src/: config.py  container.py  dependencies.py  exceptions.py  logger.py  main.py  middleware.py  monitoring.py
src/agents/: base_agent.py  ocr.py  research.py  scrap.py
src/config/: README.md  business_rules.json  sql_templates.json
src/models/: models.py
src/nodes/: ocr_nodes.py  planner_node.py  research_nodes.py  scrap_news_node.py
src/routers/: auth_route.py  contexts.py  esquemas.py  finanzas.py  news_agent.py  ocr_agent.py  rag_agent.py  scrap_agent.py  signup.py  users.py
src/schemas/: api_responses.py  db_schemas.py  schemas.py
src/services/: aws_service.py  base_service.py  bquery_db.py  business_rules_service.py  config_loader.py  context_crud.py  db_connection.py  dependency_factory.py  finance_orchestrator.py  intent_service.py  ocr_service.py  query_service.py  schema_service.py  schemas_crud.py  streaming_service.py  user_crud.py
src/tools/: search_tool.py
src/utils/: IngresosClientes.json  Vis_Ventas..json  table_relationships.json  vis_CarteraClientes.json
tests/: conftest.py  test_planner.py  test_research_tool.py
tests/tests_newsAgent/: test_full_agent.py  test_unit_nodes.py
tests/tests_research_nodes/: test_unit_nodes.py
